购物车功能完成
git-svn-id: svn://svn4.apicloud.com/A6054402379586/myFirstApp@10 0e1a2743-8d03-4e5a-a60c-7e26af42b145

--- a/html/main.html
+++ b/html/main.html
@@ -275,7 +275,7 @@ function openFrames(){
       for(var i = 0;i<menus.length;i++){
         iframes.push({
           url:'./main_frame.html',
-          name:'main_frame_'+i,
+          name:'main_frame',
           pageParam:{  //页面参数，页面中可以通过api.pageParam获取
             wareTypeIndex:i
           },
